Project gimnasio {
  database_type: 'PostgreSQL'
  Note: 'Esquema corregido y optimizado para la gestión de membresías.'
}

//Tabla Usarios que aceden al sistema
Table users {
  id int [pk, increment]
  email varchar [unique, note:"Correo del usuario"]
  password varchar [note:"Contraseña del usuario"]
  photo text [note:"Foto del usuario"]
  role_id int
}

//Tabla de Roles tiene el usario ante el sistema
Table roles {
  id int [pk, increment]
  name varchar [unique, note:"Nombre del rol que tendra un usario"] 
  description varchar [note:"Descripción del rol del usuario"]
}

//Tabla de Personas registradatas en el sistema Usuario y Clientes
Table peoples{
  id int [pk, increment]
  ci varchar(10) [unique, note:"Carnet de identidad del usario o cliente"]
  user_id int [null] 
  name varchar [note:"Nombre completo del usario o cliente"]
  phone varchar(15) [note:"Telefono del usario o cliente"]
  registration_date date [note:"Fecha en la que se registro al usario o cliente"]
  gender char [note:"F: Femenino, M: Masculino, O: Otro"]
}

//Tabla de Membresias ofertadas en el gimnasio
Table memberships {
  id int [pk, increment]
  name varchar [note:"Nombre que se le dio a la membresia"]
  duration_months int [note:"Cantidad de meses que se oferta en la membresia"]
  price decimal(8, 2) [note:"El precio de la membresia"]
  is_group boolean [default: false, note:"Especifica si la membreisa es en grupo o personal"]
  description varchar [note:"Alamcena informacion adicional a la membresia"] 
}

//Tabla Estado Membresia para controlar cual es el estado de la membrecia
Table membership_statuses {
  id int [pk, increment]
  name varchar [note: "Ej: Activo, Vencida, Por Vencer"] 
}

//Tabla Membresias Clientes datos de las membresias de los clientes
Table client_memberships {
  id int [pk, increment]
  membership_id int
  client_id int
  payment_status_id int
  start_date date [note: "Fecha en la que inica la membresia"]
  end_date date [note: "Fecha en la que terminara la membresia"]
  total_price decimal(8, 2) [note:"Precio total que el cliente debe pagar"]
  pending_balance decimal(8, 2) [default: null,note:"Saldo que debe el Cliente"]
  advance_payment decimal(8, 2) [default: null,note:"Anticipo que puede dejar el cliente"]
  membership_status_id int 
  group_code varchar [note: "Clave para vincular miembros de un mismo plan grupal."]
}

//Tabla Estado Pago, almacena informacion de estado de la membresia
Table payment_statuses {
  id int [pk, increment]
  name varchar [unique, note:"Cancelado, Pendiente"]
}

//Tabla Tikets, almacena informacion de la asistencia del cliente al gimasio relacionada a la mambresia
//EL tiket se imprime cada ves que el cliente accede a los anvientes, sirve como medida de control y asitencia
Table tickets{
  id int [pk, increment]
  client_membership_id int 
  ticket_datetime datetime [note:"Fecha y hora del tiket"]
}

// Relaciones (Relationships)
Ref: peoples.user_id > users.id // Relación 1:1
Ref: users.role_id > roles.id
Ref: client_memberships.client_id > peoples.id
Ref: client_memberships.membership_id > memberships.id
Ref: client_memberships.membership_status_id > membership_statuses.id
Ref: client_memberships.payment_status_id > payment_statuses.id
Ref: tickets.client_membership_id > client_memberships.id // Relación de ticket corregida

